add a git status endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 main:
   build: .
+  labels:
+    - convox.port.443.protocol=https
+    - convox.port.443.secure=true
   ports:
-  - 9000:8080
+  - 443:8080
