testing deploying this to s3 for transposit

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>name.monkey</groupId>
       <artifactId>lambda-wrapper</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 
