--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,50 @@
     <aws.version>1.10.42</aws.version>
   </properties>
 
+  <distributionManagement>
+    <snapshotRepository>
+      <id>repo.transposit.com</id>
+      <url>s3://repo.transposit.com/snapshot</url>
+    </snapshotRepository>
+    <repository>
+      <id>repo.transposit.com</id>
+      <url>s3://repo.transposit.com/release</url>
+    </repository>
+  </distributionManagement>
+  <repositories>
+    <repository>
+      <id>repo.transposit.com</id>
+      <url>s3://repo.transposit.com/release</url>
+    </repository>
+  </repositories>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+    </plugins>
+    <extensions>
+      <extension>
+        <groupId>org.kuali.maven.wagons</groupId>
+        <artifactId>maven-s3-wagon</artifactId>
+        <version>1.2.1</version>
+      </extension>
+    </extensions>
+  </build>
+
   <modules>
     <module>lambda-wrapper</module>
     <module>example</module>
