--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
     </repository>
   </repositories>
 
+  <scm>
+    <connection>scm:git:git@github.com:kmonkeyjam/dropwizard-lambda-gateway.git</connection>
+    <developerConnection>scm:git:git@github.com:kmonkeyjam/dropwizard-lambda-gateway.git</developerConnection>
+    <url>scm:git:git@github.com:kmonkeyjam/dropwizard-lambda-gateway.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <build>
     <plugins>
       <plugin>
