--- a/example/pom.xml
+++ b/example/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>name.monkey</groupId>
     <artifactId>parent</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
