add in support for redirects

--- a/example/src/main/resources/GatewayConfig.json
+++ b/example/src/main/resources/GatewayConfig.json
@@ -15,5 +15,13 @@
     "deployedFunction": "test",
     "responseType": "text/html",
     "methodType": "GET"
+  },
+  {
+    "path": "/redirect",
+    "className": "ExampleLambda",
+    "lambdaMethod": "handleRedirect",
+    "deployedFunction": "testRedirect",
+    "methodType": "GET",
+    "redirect": true
   }
 ]
