--- a/lambda-wrapper/pom.xml
+++ b/lambda-wrapper/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>name.monkey</groupId>
     <artifactId>parent</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
