--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <groupId>name.monkey</groupId>
   <artifactId>parent</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.4-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modelVersion>4.0.0</modelVersion>
 
@@ -34,7 +34,7 @@
     <connection>scm:git:git@github.com:kmonkeyjam/dropwizard-lambda-gateway.git</connection>
     <developerConnection>scm:git:git@github.com:kmonkeyjam/dropwizard-lambda-gateway.git</developerConnection>
     <url>scm:git:git@github.com:kmonkeyjam/dropwizard-lambda-gateway.git</url>
-    <tag>parent-0.0.3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
