pass through headers as well

--- a/example/src/main/resources/GatewayConfig.json
+++ b/example/src/main/resources/GatewayConfig.json
@@ -30,6 +30,7 @@
     "lambdaMethod": "handleQueryParamPassthrough",
     "deployedFunction": "testPassthrough",
     "passthroughQueryParams": true,
+    "passthroughHeaders": true,
     "responseType": "application/json",
     "methodType": "GET"
   }
