--- a/lambda-wrapper/pom.xml
+++ b/lambda-wrapper/pom.xml
@@ -62,6 +62,16 @@
       <artifactId>aws-lambda-java-core</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
